# usd-convert-asset

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Third_Party_Notices.md  conanfile.py  premake5.lua  repo.bat  repo.sh  repo.toml
.agents/skills/omniverse-asset-to-usd/: SKILL.md
.agents/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/: SKILL.md
.agents/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-getting-started/references/: source-build.md  troubleshooting.md
.claude/skills/omniverse-asset-to-usd/: SKILL.md
.claude/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/references/: cli-flags.md  format-support.md
.claude/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-contributing/: SKILL.md
.claude/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-getting-started/references/: source-build.md
.claude/skills/usd-convert-asset/: SKILL.md
.codex/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/references/: troubleshooting.md
.codex/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-getting-started/: SKILL.md
.cursor/skills/omniverse-asset-to-usd/: SKILL.md
.cursor/skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/references/: format-support.md
include/: usd_convert_asset.h
skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/: SKILL.md
skills/omniverse-asset-to-usd/omniverse-asset-to-usd-asset-conversion/references/: cli-flags.md
source/python/: README.md  __init__.py  _bootstrap.py  hatch_build.py  premake5.lua  pyproject.toml
source/python/PACKAGE-LICENSES/: fbxsdk-LICENSE.md  iraysdk-license.txt
source/python/bindings/: omniverse_binding.cpp
source/python/templates/: _version.py  pyproject.toml
source/python/tests/: test_cli_interrupt.py  test_cli_stdio.py  test_pip_wheel_smoke.py
source/python/usd_convert_asset/: __init__.py  __main__.py  _version.py  cli.py
source/tests/app/: main.cpp
source/tests/cpp/: testUtils.cpp
source/tests/python/: async_test_case.py  test_public_samples.py
source/usd_plugins/: file_format.cpp  file_format.h  plugInfo_linux-x86_64.json  plugInfo_windows-x86_64.json
tools/conan/: conan_deps.py  target_deps_deploy.py
tools/conan/recipes/assimp/5.x/: conan_deps.cmake  conanfile.py
tools/conan/recipes/assimp/5.x/patches/: 0001-nv-patches.patch  6.0.2-0001-apply-internal-fixes.patch
tools/packman/: packman  packman.cmd  packmanconf.py  python.bat  python.sh
tools/packman/bootstrap/: configure.bat  download_file_from_url.ps1  fetch_file_from_packman_bootstrap.cmd  generate_temp_file_name.ps1  generate_temp_folder.ps1  install_package.py
tools/repoman/: repo_subst.py  repo_tools.toml  repoman.py  repoman_bootstrapper.py
