[project]
name = "usd-convert-asset"
version = "9.0.12"
description = "usd-convert-asset"
authors = [
    {name = "NVIDIA"},
]
license = {text = "Apache-2.0 AND CC-BY-4.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.urls]
Homepage = "https://developer.nvidia.com/omniverse"
Documentation = "https://docs.omniverse.nvidia.com"

[project.scripts]
usd-convert-asset = "usd_convert_asset.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/hatch_build.py",
    "/pyproject.toml",
    "/usd_convert_asset/**",
    "/asset_converter_native_bindings/**",
    "/PACKAGE-LICENSES/**",
    "/skills/**",
]

[tool.hatch.build.targets.sdist.force-include]
"asset_converter_native_bindings" = "asset_converter_native_bindings"
"PACKAGE-LICENSES" = "PACKAGE-LICENSES"
"LICENSE" = "LICENSE"
"skills" = "skills"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["usd_convert_asset"]
artifacts = [
    "usd_convert_asset/_version.py",
    "asset_converter_native_bindings/**",
    "PACKAGE-LICENSES/**",
    "skills/**",
]

[tool.hatch.build.targets.wheel.force-include]
"asset_converter_native_bindings" = "asset_converter_native_bindings"
"PACKAGE-LICENSES" = "PACKAGE-LICENSES"
"LICENSE" = "LICENSE"
"skills" = "skills"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
