[project]
name = "usd-convert-asset"
version = "1.0.0"
description = "Asset Converter that converts common asset file formats to OpenUSD"
authors = [
    {name = "NVIDIA"},
]
license = {text = "Apache-2.0 AND CC-BY-4.0"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/NVIDIA-Omniverse/usd-convert-asset"

[project.scripts]
usd-convert-asset = "usd_convert_asset.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/hatch_build.py",
    "/pyproject.toml",
    "/usd_convert_asset/**",
    "/asset_converter_native_bindings/**",
    "/PACKAGE-LICENSES/**",
]

[tool.hatch.build.targets.sdist.force-include]
"asset_converter_native_bindings" = "asset_converter_native_bindings"
"PACKAGE-LICENSES" = "PACKAGE-LICENSES"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"
manylinux-platform = "2.35"

[tool.hatch.build.targets.wheel]
packages = ["usd_convert_asset"]
artifacts = [
    "usd_convert_asset/_version.py",
    "usd_convert_asset/skills/**",
    "asset_converter_native_bindings/**",
    "PACKAGE-LICENSES/**",
]

[tool.hatch.build.targets.wheel.force-include]
"asset_converter_native_bindings" = "asset_converter_native_bindings"
"PACKAGE-LICENSES" = "PACKAGE-LICENSES"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
manylinux-platform = "2.35"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
